LP1890849 Grid context menu override fixed width
Allow grid context menus to expand horizontally for longer terms to
avoid scroll bars and/or having text get cut off.

--- a/Open-ILS/src/eg2/src/app/share/grid/grid.component.css
+++ b/Open-ILS/src/eg2/src/app/share/grid/grid.component.css
@@ -171,3 +171,8 @@
 .eg-grid-filter-menu .dropdown-item:hover {
   background-color: transparent;
 }
+
+/* Popovers have a too-narrow max-width.  Override it */
+.popover {
+    max-width: initial;
+}
